--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             to { transform: rotate(360deg); }
         }
 
-        /* Ajustes específicos para o Leaflet no container arredondado */
         .leaflet-container {
             width: 100%;
             height: 100%;
@@ -68,6 +67,7 @@
     "recharts": "https://esm.sh/recharts@2.15.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
