--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>SGR-Vias - Gestão de Obras</title>
     
-    <!-- Tailwind CSS CDN -->
+    <!-- Tailwind CSS CDN (Development version) -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Leaflet Maps CSS -->
